--- a/pages/changelog/1.4.0.md
+++ b/pages/changelog/1.4.0.md
@@ -28,7 +28,7 @@
 * Deprecated data-role="content" and option contentTheme (data-theme). This also means that the framework no longer adds ARIA role "main". Add class ui-content and role="main" in your markup instead.
 * Deprecated $.mobile.activePageClass, $.mobile.activeBtnClass, $.mobile.focusClass.
 * Deprecated $.mobile.getDocumentUrl and $.mobile.getDocumentBase – both are available from $.mobile.path.
-* jqmData: Checkes for index of before running regex to improve performance Fixes #5999 - $.find: added indexOf checking for jqmData selector to improve speed on non-jqm selectors ([#5999](http://github.com/jquery/jquery-mobile/issues/5999), [375b21b](http://github.com/jquery/jquery-mobile/commit/375b21ba03be1255ef13d80ef103a8bce157e959))
+* jqmData: Checks for index of before running regex to improve performance Fixes #5999 - $.find: added indexOf checking for jqmData selector to improve speed on non-jqm selectors ([#5999](http://github.com/jquery/jquery-mobile/issues/5999), [375b21b](http://github.com/jquery/jquery-mobile/commit/375b21ba03be1255ef13d80ef103a8bce157e959))
 * Moved $.mobile.resetActivePageHeight from navigation to core. Fixes #5997 - Panel depends on resetActivePageHeight ([#5997](http://github.com/jquery/jquery-mobile/issues/5997), [b39787b](http://github.com/jquery/jquery-mobile/commit/b39787ba8638bdc05060e418d9db8c8bf2fa161d))
 * KeepNative: Made keep native just a selector string on $.mobile and deprecated keepNativeSelector from page ([40857b3](http://github.com/jquery/jquery-mobile/commit/40857b36f8364a69f8e8da905451c4ceba386f12))
 * MinScrollBack: change default to 0 and deprecate ([536f153](http://github.com/jquery/jquery-mobile/commit/536f153b1472d240eedec574e76c0d87f1033ed9))
